@@ -1,3 +1,10 @@
+2007-01-17  Jens Granseuer <jensgr@gmx.net>
+
+	Fixes #395539
+
+	* gnome-mouse-properties.c (read_cursor_font, populate_tree_model,
+	setup_dialog, dialog_response_cb, main): fixed memory leaks.
+
 2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>
 
 	Fixes #336286
